@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         go-version:
-          - 1.19.x
+          - 1.20.x
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
