@@ -1,5 +1,8 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
+next:
+          - update internal check_nsc_web to 0.6.2
+
 1.3.7    Fri Jul 14 13:07:32 CEST 2023
           - add usage for testcmd command
           - fix performance metrics for epn checks
